--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,13 @@ a {color:#188007}
 a:hover {color:#188007}
 a:visited {color:#F0E68C}
 div.picture img {display:block; margin-left:auto; margin-right:auto; width:720px; height:540px}
+
+.cat{clear:both}
+.cat .gallery{float:left;width:460px;margin:0;padding:0}
+.cat .gallery ul{list-style:none;display:block;margin:20px 0 0 0;padding:0;height:200px}
+.cat .gallery li{display:block;float:left;margin-left:20px;padding:0}
+.cat .gallery li:first-child{margin-left:0}
+.cat .bio {float:right;width:460px;margin:0;padding:0}
+.cat .bio h1{margin-top:0;padding-top:0}
+.cat .bio ul{list-style:none;margin:0;padding:0}
+.cat .bio .label{font-weight:700}	
