--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ div#header-container {height: 260px }
 div#header-container table { margin:0 auto; position:relative}
 div#header-container table#menu {margin-top:5px}
 div#header-container table#banner {margin-top:20px}
-div#content { padding-top:200px;color:#F0E68C; font-size:25px }
+div#content { padding-top:200px;padding-bottom:24px;color:#F0E68C; font-size:25px }
 div#footer-container { position:fixed; bottom:0; left:0;width:100%}
 div#footer-container div#footer table{margin:5px auto 5px; background-color:darkgreen; width:960px}
 a {color:#188007}
