--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 th{background:#333;}
 body {background:#000; margin:0; min-width:960px;}
+table#banner{background-color:dimgrey}
+table#banner tr th#logo{width:700px}
+table#banner tr th#logo img{width:750px;height:150px}
+table#banner tr th#picture img{width:200px;height:150px}
+table#menu{width:960px;background-color:darkgreen;border-width:1px}
+table#menu tr{height:26px}
+table#menu tr th.selected{background-color:#105005}
+table#menu tr th.selected a{color:darkgray}
 div#main {margin:20px auto 24px; width:960px}
 div#header-wrap {position: fixed; top: 0; left: 0; width:100%}
 div#header-container {height: 260px }
