--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@ table#banner tr th#logo{width:700px}
 table#banner tr th#logo img{width:750px;height:150px}
 table#banner tr th#picture img{width:200px;height:150px}
 table#menu{width:960px;background-color:darkgreen;border-width:1px}
-table#menu tr{height:26px}
+table#menu tr{height:c26px}
 table#menu tr th.selected{background-color:#105005}
 table#menu tr th.selected a{color:darkgray}
 div#main {margin:20px auto 24px; width:960px}
-div#header-wrap {position: fixed; top: 0; left: 0; width:100%}
+div#header-wrap {positcion: fixed; top: 0; left: 0; width:100%}
 div#header-container {height: 260px }
 div#header-container table { margin:0 auto; position:relative}
 div#header-container table#menu {margin-top:5px}
@@ -21,6 +21,12 @@ a {color:#188007}
 a:hover {color:#188007}
 a:visited {color:#F0E68C}
 div.picture img {display:block; margin-left:auto; margin-right:auto; width:720px; height:540px}
+
+.litter .gallery img{display:block;width:300px}
+.litter .gallery .caption{text-align:center}
+.litter .gallery .col1{float:left;width:300px}
+.litter .gallery .col3{float:right;width:300px}
+.litter .gallery .col2{padding:0 320px 0 320px}
 
 .cat{clear:both}
 .cat .gallery{float:left;width:460px;margin:0;padding:0}
