--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,31 @@
 th{background:#333;}
 body {background:#000; margin:0; min-width:960px;}
-table#banner{background-color:dimgrey}
-table#banner tr th#logo{width:700px}
-table#banner tr th#logo img{width:750px;height:150px}
-table#banner tr th#picture img{width:200px;height:150px}
-table#menu{width:960px;background-color:darkgreen;border-width:1px}
-table#menu tr{height:26px}
-table#menu tr th.selected{background-color:#105005}
-table#menu tr th.selected a{color:darkgray}
-div#main {margin:20px auto 24px; width:960px}
-div#header-wrap {position: fixed; top: 0; left: 0; width:100%}
-div#header-container {height: 260px }
-div#header-container table { margin:0 auto; position:relative}
-div#header-container table#menu {margin-top:5px}
-div#header-container table#banner {margin-top:20px}
-div#content { padding-top:200px;padding-bottom:24px;color:#F0E68C; font-size:25px }
-div#footer-container { position:fixed; bottom:0; left:0;width:100%}
-div#footer-container div#footer table{margin:5px auto 5px; background-color:darkgreen; width:960px}
+#banner{background-color:dimgrey}
+#banner tr th#logo{width:700px}
+#banner tr th#logo img{width:750px;height:150px}
+#banner tr th#picture img{width:200px;height:150px}
+#menu{width:960px;background-color:darkgreen;border-width:1px}
+#menu tr{height:26px}
+#menu tr th.selected{background-color:#105005}
+#menu tr th.selected a{color:darkgray}
+#main {margin:20px auto 24px; width:960px}
+#header-wrap {position: fixed; top: 0; left: 0; width:100%}
+#header-container {height: 260px }
+#header-container table { margin:0 auto; position:relative}
+#header-container #menu {margin-top:5px}
+#header-container #banner {margin-top:20px}
+#content { padding-top:200px;padding-bottom:24px;color:#F0E68C; font-size:25px }
+#footer-container { position:fixed; bottom:0; left:0;width:100%}
+#footer table{margin:5px auto 5px; background-color:darkgreen; width:960px}
+#footer tr {background-color:#333;font-size:15px;height:15px}
 a {color:#188007}
 a:hover {color:#188007}
 a:visited {color:#F0E68C}
 
-div#footer a {color:#188007; font-weight:700}
-div#footer a:hover {color:#188007}
-div#footer a:visited {color:#F0E68C}
-div.picture img {display:block; margin-left:auto; margin-right:auto; width:720px; height:540px}
+#footer a {color:#188007; font-weight:700}
+#footer a:hover {color:#188007}
+#footer a:visited {color:#F0E68C}
+.picture img {display:block; margin-left:auto; margin-right:auto; width:720px; height:540px}
 
 .litter .gallery img{display:block;width:300px}
 .litter .gallery .caption{text-align:center}
